--- a/package.json
+++ b/package.json
@@ -9,6 +9,15 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/three": "^0.170.0",
+    "glslify-loader": "^2.0.0",
+    "raw-loader": "^4.0.2",
+    "typescript": "^5.7.2",
     "vite": "^6.0.1"
+  },
+  "dependencies": {
+    "stats.js": "^0.17.0",
+    "three": "^0.171.0",
+    "vite-plugin-string": "^1.2.3"
   }
 }
