--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vite": "^6.0.1"
   },
   "dependencies": {
+    "gsap": "^3.12.5",
     "stats.js": "^0.17.0",
     "three": "^0.171.0",
     "vite-plugin-string": "^1.2.3"
